--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
     "dev": "nodemon ./app.js"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "joi": "^17.11.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "sequelize": "^6.35.2",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
-    "dotenv": "^16.3.1"
+    "sequelize": "^6.35.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
